# IGenious

./: .gitignore  CMakeLists.txt  DFT16.c  DFT16_orig.c  DFT16_simple.c  Dockerfile  README.md  call_run_python3.sh  code_temp.c  docker.sh  example.c  igen_example.c  installinstructions  json_example.c  multideclaration.py  orig_main.c  parser.py  precision_support.py  rerun.sh  rules.lark  run.py  run.sh  setup.py  setup.sh  sleep.py  test_multidec.sh  tokenizer.py
DFT16/: CMakeCache.txt  CMakeLists.txt  DFT16.bc  DFT16.c  Makefile  cmake_install.cmake  config_orig.json  config_temp.json  cov_checker.bc  cov_log.bc  dd2_diff_DFT16.bc_1.json  dd2_diff_DFT16.bc_2.json  dd2_diff_DFT16.bc_3.json  dd2_diff_DFT16.bc_4.json  igen_code_rep.c  igen_main.c  igen_random_range.c  log.dd  main.c  orig_main.c  orig_random_range.c  search_DFT16.json  some_app  temp_DFT16.bc
benchmarks/: clean.py  cleanup_benchmarks.py  create_plot.py  create_plots.py  create_table_data.py  get_best.py  read_config.py  read_results.py  run.py  run_benchmarks.py  run_configs.py  run_fixed_precision_benchmarks.py  run_mixed_precision_benchmarks.py  run_nomixed.py  tuning_time.py
docker/: Dockerfile  installinstructions
examples/DFT16/: DFT16.c  config.json  non_mixed_dd#1#d#vec.json  std_config.json
examples/DFT16/analysis/: CMakeCache.txt  DFT16.bc  Makefile  VALID_config_DFT16.bc_0.json  VALID_config_DFT16.bc_1.json  VALID_config_DFT16.bc_10.json  VALID_config_DFT16.bc_11.json  VALID_config_DFT16.bc_12.json  VALID_config_DFT16.bc_2.json  VALID_config_DFT16.bc_3.json  VALID_config_DFT16.bc_4.json  VALID_config_DFT16.bc_5.json  VALID_config_DFT16.bc_6.json  VALID_config_DFT16.bc_7.json  VALID_config_DFT16.bc_8.json  VALID_config_DFT16.bc_9.json  cmake_install.cmake  config_temp.json  dd2_diff_DFT16.bc_1.json  dd2_diff_DFT16.bc_10.json  dd2_diff_DFT16.bc_11.json  dd2_diff_DFT16.bc_12.json  dd2_diff_DFT16.bc_2.json  dd2_diff_DFT16.bc_3.json  dd2_diff_DFT16.bc_4.json  dd2_diff_DFT16.bc_5.json  dd2_diff_DFT16.bc_6.json  dd2_diff_DFT16.bc_7.json  dd2_diff_DFT16.bc_8.json  dd2_diff_DFT16.bc_9.json  include.txt  log.dd  search_DFT16.json  some_app
examples/DFT16dd/: DFT16.c  config.json  settings.json  std_config.json
examples/Dot/: a.out  config.json  dot.c
examples/MatMul/: CMakeCache.txt  CMakeLists.txt  config.json  igen_ATL_col2blk.c  igen_ATL_dNBmm_b0.c  igen_ATL_dNBmm_b1.c  igen_ATL_dNBmm_b1_redu.cpp  igen_ATL_dNBmm_b1_vec.c  igen_ATL_gemm.c  igen_ATL_gemmXX.c  igen_ATL_mmJIK.c  igen_ATL_row2blkT.c  igen_reduction.h
examples/arclength/: arclength.c  out_arclength.c  settings.json  std_config.json
examples/bisection_root/: bisection_root.c  settings.json  std_config.json
examples/dot/: config_10.json  config_4.json  config_6#vec.json  config_6.json  config_8.json  dot.c  out_dot.c  settings.json  std_config.json
examples/example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.json  example.c  funarc.c  igen_example.c  some_app
examples/example/analysis/: VALID_config_example.bc_0.json  VALID_config_example.bc_1.json  VALID_config_example.bc_2.json  config_example.json  dd2_diff_example.bc_1.json  dd2_diff_example.bc_2.json  example.bc  example.c  log.dd  main.c  random_range.c  search_example.json
examples/funarc/: a.out  config.json  funarc.c  std_config.json
examples/funarc/analysis/: VALID_config_funarc.bc_0.json  VALID_config_funarc.bc_1.json  VALID_config_funarc.bc_10.json  VALID_config_funarc.bc_11.json  VALID_config_funarc.bc_12.json  VALID_config_funarc.bc_13.json  VALID_config_funarc.bc_14.json  VALID_config_funarc.bc_15.json  VALID_config_funarc.bc_16.json  VALID_config_funarc.bc_2.json  VALID_config_funarc.bc_3.json  VALID_config_funarc.bc_4.json  VALID_config_funarc.bc_5.json  VALID_config_funarc.bc_6.json  VALID_config_funarc.bc_7.json  VALID_config_funarc.bc_8.json  VALID_config_funarc.bc_9.json  config_funarc.json  dd2_diff_funarc.bc_1.json  dd2_diff_funarc.bc_10.json  dd2_diff_funarc.bc_11.json  funarc.bc  log.dd  (+16 more)
examples/linear/: linear.c  out_linear.c  settings.json  std_config.json
examples/matmul/: config_4.json  config_6#vec.json  config_6.json  config_8.json  matmul.c  out_matmul.c  settings.json  std_config.json
examples/newton_root/: newton_root.c  settings.json  std_config.json
examples/simpsons/: config.json  out_simpsons.c  settings.json  simpsons.c  std_config.json
igen_example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example.c  igen_example.c  small
new/: a.out  config_DFT16.json  config_temp.json  example.c  parser.py  rules.lark  rules_orig  test.py
old/: DFT16_simple.c  changeTypes_nonmixed.py  clean_old.py  example.ast  example.c  get_best.py  igen_example.c  parser.py  precision_support.py  read_config.py  rerun.sh  rerun_1.sh  restore_1.sh  rules.lark  run_tests.py  setup_1.sh  simpsons.c  small.c  test_small.py
old/test/: ASTVisitor.cpp
old/test_fourier/: cmake_install.cmake  main.c  random_range.c  some_app
plots/: runtimes.txt
scripts/: call_run_python3.sh  changeTypes.py  changeTypes_nonmixed.py  change_types.py  createChgMain.py  create_main.py  helper.py  multidecl.py  multideclaration.py  parser.py  precision_support.py  removeMultiDecl.py  rerun.py  rerun.sh  restore.py  restore.sh  rsld.py  run.py  runConfig.py  run_igenious.py  setup.py  setup.sh  setupCode.py  setupNew.py  setupVM.txt  setup_igenious.py  tuner_call.py
scripts/changeTypes/: ASTTraverser.h  ASTVisitor.cpp  ASTVisitor.h  ASTVisitor0.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
scripts/removeSameLineDecl/: ASTTraverser.cpp  ASTTraverser.h  ASTVisitor.cpp  ASTVisitor.h  CMakeCache.txt  CMakeLists.txt  Makefile
scripts_hifptuner/: DFTHi.c  rerun.sh  restore.sh  setup.py  setup.sh  to38.sh
src/: dd2.py  dd2_prof.py  igen_CMakeLists.txt  igen_CMakeLists_nomixed.txt  igen_CMakeLists_novec.txt  igen_CMakeLists_vec.txt  normal_CMakeLists.txt  random_range.c  random_range_igen.c  rules.lark
test_fourier/: CMakeCache.txt  CMakeLists.txt  Makefile
testing/: read_results.py  run_tests.py
(+135 files in other folders)
